# desarquivo

./: .gitignore  README.MD  desarquivo.py  pyproject.toml
arquivo/: __init__.py  client.py  models.py
core/: cli.py
data/: db.py  models.py
data/sql/: 001_create_db.sql  002_fill_date_dim.sql  003_fill_category_dim.sql  004_fill_source_dim.sql  005_fill_location_dim.sql
extractor/: __init__.py  core.py  ojogo.py  publico.py  radio_comercial.py  record.py  rtp.py  tmdb.py
