[tool.poetry]
name = "desarquivo"
version = "0.1.0"
description = ""
authors = ["Cristiano Lopes <e.mail@cristianolopes.eu>"]

[tool.poetry.dependencies]
python = "^3.11.0"
click = "^8.1.2"
pendulum = "^2.1.2"
sqlite-utils = "^3.26"
httpx = "^0.23.3"
pydantic = "^1.10.5"
pyquery = "^2.0.0"
chardet = "^5.1.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
desarquivo = "desarquivo:cli"